--- a/account/templates/vieword.htm
+++ b/account/templates/vieword.htm
@@ -72,6 +72,6 @@
                     <td>{{ o.logcs.note }}</td>
                 </tr>
             </table>
-            <center><a class="btnB bBtn" href="{{ request.nPath.我的订单 }}">返回</a></center>
+            <center><a class="btnB bBtn" href="{% url 'myOrd' %}">返回</a></center>
         </div>
 {% endblock %}
