--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-    <title>{% block title %}{{ request.domElement.get_path_display }}{% endblock %} - new31管理中心</title>
+    <title>{% block title %}{% if request.title %}{{ request.title }} {% endif %}{% endblock %} - new31管理中心</title>
     <meta name="Keywords" content="{% block keywords %}31客,31客蛋糕,蛋糕{% endblock %}" />
     <meta name="Description" content="{% block description %}蛋糕电子商务{% endblock %}" />
     <link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico" type="image/x-icon" />
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}office/js/base.js"></script>
     <script type="text/javascript">
         var csrf = "{% csrf_token %}";
+        {% block javascript %}{% endblock %}
     </script>
     {% block js %}{% endblock %}
 <!--[if IE 6]>
@@ -31,119 +32,118 @@
     <ul id="navMenu">
       <li><a href="/" id="showNav"></a></li>
       <li>
-        <a href="{{ request.pPath.订单 }}" class="nav">订单管理</a>
+        <a href="{% url 'order:ords' %}" class="nav">订单管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="{{ request.pPath.订单 }}">订单</a></li>
-            <li><a href="/back/">退货</a></li>
+            <li><a href="{% url 'order:ords' %}">订单</a></li>
+            <li><a href="{% url 'order:ords' %}">退货</a></li>
           </ul>
         </div>
       </li>
       <li>
-        <a href="{{ request.pPath.物流 }}" class="nav">物流管理</a>
+        <a href="{% url 'logistics:logcs' %}" class="nav">物流管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="{{ request.pPath.物流 }}">物流</a></li>
+            <li><a href="{% url 'logistics:logcs' %}">物流</a></li>
           </ul>
         </div>
       </li>
       <li>
-        <a href="{{ request.pPath.生产 }}" class="nav">生产管理</a>
+        <a href="{% url 'produce:produce' %}" class="nav">生产管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="{{ request.pPath.生产 }}">生产</a></li>
-            <li><a href="{{ request.pPath.备货 }}">备货</a></li>
-            <li><a href="{{ request.pPath.物料 }}">物料</a></li>
+            <li><a href="{% url 'produce:produce' %}">生产</a></li>
+            <li><a href="{% url 'inventory:inventory' %}">备货</a></li>
+            <li><a href="{% url 'bom:bom' %}">物料</a></li>
           </ul>
         </div>
       </li>
       <li>
-        <a href="/after/" class="nav">售后管理</a>
+        <a href="{% url 'bom:bom' %}" class="nav">售后管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="/after/">普销</a></li>
-            <li><a href="/tryeat/">试吃</a></li>
+            <li><a href="{% url 'bom:bom' %}">普销</a></li>
+            <li><a href="{% url 'bom:bom' %}">试吃</a></li>
           </ul>
         </div>
       </li>
       <li>
-        <a href="/discount/" class="nav">促销管理</a>
+        <a href="{% url 'discount:dis' %}" class="nav">促销管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="/applytryeat/">试吃</a></li>
-            <li><a href="/discount/">会员折扣</a></li>
-            <li><a href="/ticket/">蛋糕券</a></li>
-            <li><a href="/integral/">积分换购</a></li>
-            <li><a href="/party/">活动</a></li>
+            <li><a href="{% url 'discount:dis' %}">试吃</a></li>
+            <li><a href="{% url 'discount:dis' %}">会员折扣</a></li>
+            <li><a href="{% url 'discount:dis' %}">蛋糕券</a></li>
+            <li><a href="{% url 'discount:dis' %}">积分换购</a></li>
+            <li><a href="{% url 'discount:dis' %}">活动</a></li>
           </ul>
         </div>
       </li>
       <li>
-        <a href="/finance/" class="nav">财务管理</a>
+        <a href="{% url 'finance:fnc' %}" class="nav">财务管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="{{ request.pPath.财务 }}">财务</a></li>
-            <li><a href="/finance/">零钱</a></li>
-            <li><a href="/reimburse/">退款</a></li>
+            <li><a href="{% url 'finance:fnc' %}">财务</a></li>
+            <li><a href="{% url 'finance:fnc' %}">零钱</a></li>
+            <li><a href="{% url 'finance:fnc' %}">退款</a></li>
           </ul>
         </div>
       </li>
       <li>
-        <a href="/statistics/" class="nav">报表统计</a>
+        <a href="{% url 'bom:bom' %}" class="nav">报表统计</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="/statistics/">订单统计</a></li>
-            <li><a href="/statssale/">销售明细</a></li>
+            <li><a href="{% url 'bom:bom' %}">订单统计</a></li>
+            <li><a href="{% url 'bom:bom' %}">销售明细</a></li>
           </ul>
         </div>
       </li>
       <li>
-        <a href="/member/" class="nav">会员管理</a>
+        <a href="{% url 'account:myOrd' %}/member/" class="nav">会员管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="/member/">会员信息</a></li>
-            <li><a href="/memberint/">会员积分</a></li>
+            <li><a href="{% url 'account:myOrd' %}">会员信息</a></li>
+            <li><a href="{% url 'account:myOrd' %}">会员积分</a></li>
           </ul>
         </div>
       </li>
       <li>
-        <a href="/purview/" class="nav">权限管理</a>
+        <a href="{% url 'purview:purview' %}" class="nav">权限管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="/purview/">权限分配</a></li>
-            <li><a href="/adminlog/">管理员日志</a></li>
+            <li><a href="{% url 'purview:purview' %}">权限分配</a></li>
+            <li><a href="{% url 'log:log' %}">管理员日志</a></li>
           </ul>
         </div>
       </li>
       <li>
-        <a href="/system/" class="nav">系统设置</a>
+        <a href="{% url 'purview:purview' %}" class="nav">系统设置</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="/item/item/">商品</a></li>
-            <li><a href="/spec/">规格</a></li>
-            <li><a href="/tag/tag/">标签</a></li>
-            <li><a href="/slide/">首页幻灯片</a></li>
-            <li><a href="/payment/">支付方式</a></li>
-            <li><a href="/area/">配送区域</a></li>
-            <li><a href="/signtime/">收货时间</a></li>
-            <li><a href="/logistics/time/">物流时间</a></li>
-            <li><a href="/filecheck/">文件校验</a></li>
+            <li><a href="{% url 'purview:purview' %}">商品</a></li>
+            <li><a href="{% url 'purview:purview' %}">规格</a></li>
+            <li><a href="{% url 'purview:purview' %}">标签</a></li>
+            <li><a href="{% url 'purview:purview' %}">首页幻灯片</a></li>
+            <li><a href="{% url 'purview:purview' %}">支付方式</a></li>
+            <li><a href="{% url 'purview:purview' %}">配送区域</a></li>
+            <li><a href="{% url 'purview:purview' %}">收货时间</a></li>
+            <li><a href="{% url 'purview:purview' %}">物流时间</a></li>
           </ul>
         </div>
       </li>
-      <li><a href="{{ request.nPath.商城 }}" target="_blank">查看网店</a></li>
+      <li><a href="{% url 'shop:shop' %}" target="_blank">查看网店</a></li>
 {% if user.is_superuser %}
-      <li><a href="{{ request.nPath.站点管理 }}" target="_blank">站点管理</a></li>
+      <li><a href="{% url 'admin:index' %}" target="_blank">站点管理</a></li>
 {% endif %}
-      <li><a href="{{ request.nPath.登出 }}">登出</a></li>
+      <li><a href="{% url 'account:logout' %}">登出</a></li>
     </ul>
     <div id="header">
-        <div id="urHere"><a href="/office/" id="index">31kecake 管理中心</a> {% if request.domElement %} <a href="{{ request.domElement.path }}">{{ request.domElement.get_path_display }}</a>{% endif %}</div>
+        <div id="urHere"><a href="{% url 'office:office' %}" id="index">31kecake 管理中心</a> {% if request.domElement %} <a href="{% url request.domElement.view_name %}">{{ request.title }}</a>{% endif %}</div>
         <ul id="toolsBar">
-          <li><a href="{{ request.pPath.新订单 }}">新订单</a></li>
-          <li><a href="{{ request.pPath.地图 }}">地图</a></li>
-          <li><a href="{{ request.pPath.物流安排 }}?c=-1">物流安排</a></li>
-          <li><a href="{{ request.pPath.票据打印 }}">票据打印</a></li>
+          <li><a href="{% url 'order:newOrdFrm' %}">新订单</a></li>
+          <li><a href="{% url 'logistics:baiduMap' %}">地图</a></li>
+          <li><a href="{% url 'logistics:logcsView' %}?c=-1">物流安排</a></li>
+          <li><a href="{% url 'print:printOrd' %}">票据打印</a></li>
         </ul>
         <span id="adminName">{{ request.user.username }} [ {% if request.user.is_superuser %}超级管理员{% else %}普通管理{% endif %} ]</span>
     </div>
@@ -161,7 +161,7 @@
         <div id="tool">
           <ul class="action">
 {% for i in request.domElement.sub_set.getDomElement %}
-              <li><a href="{{ i.path }}" class="button">{{ i.get_path_display }}</a></li>
+              <li><a href="{% url i.path %}" class="button">{{ i.get_path_display }}</a></li>
 {% endfor %}
           </ul>
         </div>
