--- a/account/templates/settings.htm
+++ b/account/templates/settings.htm
@@ -4,15 +4,15 @@
     <div class="subMenu">
         <h4>设置</h4>
         <ul>
-            <li><a href="{{ request.nPath.个人设置 }}" class="select">基本资料</a></li>
-            <li><a href="{{ request.nPath.修改密码 }}">密码</a></li>
+            <li><a href="{% url 'settings' %}" class="select">基本资料</a></li>
+            <li><a href="{% url 'changepwd' %}">密码</a></li>
         </ul>
     </div>
 {% endblock %}
 
 {% block content %}
         <div class="pWhite">
-            <form action="{{ request.nPath.保存设置 }}" method="post">
+            <form action="{% url 'saveSet' %}" method="post">
 {% for i in frm %}
                 <div class="box">
                     <label>{{ i.label }}：</label>
