--- a/inventory/templates/inventoryui.htm
+++ b/inventory/templates/inventoryui.htm
@@ -34,7 +34,7 @@
 {% endfor %}
 {% endfor %}
           <tr>
-            <td align="center"><a href="{{ request.pPath.备货格式化 }}?s={{ form.initial.s }}" class="button">备货格式化</a></td>
+            <td align="center"><a href="{% url 'defaultInv' form.initial.s %}" class="button">备货格式化</a></td>
             <td colspan="3">&nbsp;</td>
           </tr>
       </table>
