--- a/order/templates/orderneworedit.htm
+++ b/order/templates/orderneworedit.htm
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-        <form action="{{ request.pPath.提交订单 }}" method="POST" id="checkout">
+        <form action="{% url 'order:submitOrd' %}" method="POST" id="checkout">
           <table width="100%" cellpadding="3" cellspacing="1" class="sortTable">
             <thead>
             <tr>
@@ -32,7 +32,7 @@
               <td><span id="nfee{{ i.mark }}">{{ i.nfee|floatformat:2 }}</span></td>
               <td>{{ i.forms.num }}</td>
               <td><span id="st{{ i.mark }}">{{ i.total|floatformat:2 }}</span></td>
-              <td><a href="{{ request.pPath.删订单商品 }}?mark={{ i.mark }}" class="button">删除</a></td>
+              <td><a href="{% url 'order:delItemOrd' i.mark %}" class="button">删除</a></td>
             </tr>
 {% endfor %}
           </tbody>
