全局安保策略修正
 - url路由策略与全局安保分离



Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/logistics/templates/logcsview.htm
+++ b/logistics/templates/logcsview.htm
@@ -39,6 +39,10 @@
 {% endfor %}
 {% endfor %}
 {% endfor %}
+{% empty %}
+          <tr>
+            <td align="center" colspan="10">无记录</td>
+          </tr>
 {% endfor %}
           <tr>
             <td colspan="20" align="right">共 {{ oList|length }} 条记录</td>
