--- a/produce/templates/produceui.htm
+++ b/produce/templates/produceui.htm
@@ -33,6 +33,10 @@
 {% endfor %}
 {% endfor %}
 {% endfor %}
+{% empty %}
+          <tr>
+            <td align="center" colspan="10">无记录</td>
+          </tr>
 {% endfor %}
         </table>
 {% endblock %}
