--- a/tag/templates/tag.htm
+++ b/tag/templates/tag.htm
@@ -13,7 +13,7 @@
          <li>
                 <img alt="{{ i.item.name }}" title="{{ i.item.name }}" data-src="{{ i.img.url }}" class="styp{{ i.typ }}" />
                 <div class="pinSide{{ i.typ }}">
-                    <h2><a href="{% url 'tagShow' i.item.name|urlencode %}">{{ i.item.name }}</a></h2>
+                    <h2><a href="{% url 'tag:tagShow' i.item.name|urlencode %}">{{ i.item.name }}</a></h2>
                     <p class="pinDes">{{ i.item.itemdesc_set.getAll.0.desc }}</p>
                     <ul class="pinInfo">
                         <li class="addDate">{{ i.item.addTime }}</li>
@@ -22,12 +22,12 @@
                     </ul>
                     <div class="tags">
 {% for ii in i.item.tag.getByRandom|slice:":9" %}
-                        <a href="{% url 'tagShow' ii.tag|urlencode %}" class="tags_{{ tagsCls|random }}">{{ ii.tag }}</a>
+                        <a href="{% url 'tag:tagShow' ii.tag|urlencode %}" class="tags_{{ tagsCls|random }}">{{ ii.tag }}</a>
 {% endfor %}
                     </div>
                     <div class="vote">
-                        <a class="btnLike" href="{% url 'itemLike' i.item.id %}">喜欢</a>
-                        <a class="btnReplay" href="{% url 'getSpec' i.item.id %}">购买</a>
+                        <a class="btnLike" href="{% url 'ajax:itemLike' i.item.id %}">喜欢</a>
+                        <a class="btnReplay" href="{% url 'ajax:getSpec' i.item.id %}">购买</a>
                     </div>
                 </div>
             </li>
